Initialize legacy branch for FeatherPlugin